test/testdata/list/index_out_of_bounds_error.lox
var list = [1, 2, 3];
list[5]; // error: index 5 out of bounds for list of length 3
